LITT Changelog:
===============

 * 2019-08-28: Bug fix: If a column was used as second operand in WHERE then it was not
               included in used columns.
 * 2019-08-28: Can now use -c option with xbc listings and not get tables for the default
               columns joined in the query.
 * 2019-08-28: Added SQLite compile option SQLITE_TEMP_STORE=3 (always memory) and removed 
               code to set PRAGMA temp_store = 2.
               Added SQlite compile option SQLITE_DEFAULT_FOREIGN_KEYS=1 (on) and removed
               code to set PRAGMA foreign_keys = ON.
 * 2019-08-27: Moved the changelog to "Changelog.txt" instead of having it in "litt.cpp".
               Also added contents of oldlitt.btm changelog here at the bottom!
 * 2019-08-27: Changes in story virtual columns to make them more logical and useful:
               - Renamed stng => bstng = authors (ng) for book+story (b+st)
               - Added stng = authors (ng) for story (in all books the story appears in)
               - Added stnc = author count for story (in all books the story appears in)
               - Renamed astg => bastg = Stories (stg) for book+author (b+a)
                 * Also renamed btastg => btbastg = bt + bastg
               - Added bastc (story count for book+author)
               - Added astg = Stories for author
               - Added stbc (story book count) and stbg (story books)
               - Added astc (author story count) and bstc (book story count)
              Added some more virtual count columns:
               - nc (book author count)
               - dc (date read count)
              Fixed some bugs in virtual story columns, needs distinct to get either book or author.
 * 2019-08-27: Got rid of support for old Stories tables and switched to using #define:d string literals
               in addAuxTables, saved over 4k in code size.
 * 2019-08-27: Using these SQLite compile time options from https://www.sqlite.org/compile.html: